build: adds java opens to ds-api tests